@@ -1,12 +1,31 @@
 man_MANS = libmicrohttpd.3
 EXTRA_DIST = $(man_MANS) Doxyfile
 
-DISTCLEANFILES = microhttpd.cps microhttpd.dvi tutorial.cps tutorial.dvi
-info_TEXINFOS = microhttpd.texi tutorial.texi
-microhttpd_TEXINFOS = lgpl.texi chapters/basicauthentication.inc chapters/bibliography.inc chapters/exploringrequests.inc fdl-1.3.texi chapters/hellobrowser.inc chapters/introduction.inc chapters/processingpost.inc chapters/responseheaders.inc chapters/largerpost.inc \
-examples/basicauthentication.c \
-examples/hellobrowser.c \
-examples/largepost.c \
-examples/logging.c \
-examples/responseheaders.c \
-examples/simplepost.c
+DISTCLEANFILES = \
+  microhttpd.cps \
+  microhttpd.dvi \
+  tutorial.cps \
+  tutorial.dvi
+info_TEXINFOS = \
+  microhttpd.texi \
+  tutorial.texi
+microhttpd_TEXINFOS = \
+  chapters/basicauthentication.inc \
+  chapters/bibliography.inc \
+  chapters/exploringrequests.inc \
+  chapters/hellobrowser.inc \
+  chapters/introduction.inc \
+  chapters/largerpost.inc \
+  chapters/processingpost.inc \
+  chapters/responseheaders.inc \
+  chapters/tlsauthentication.inc \
+  examples/basicauthentication.c \
+  examples/hellobrowser.c \
+  examples/largepost.c \
+  examples/logging.c \
+  examples/responseheaders.c \
+  examples/simplepost.c \
+  examples/tlsauthentication.c \
+  fdl-1.3.texi \
+  lgpl.texi 
+
